# ReaBeat

./: .gitignore  .gitmodules  CHANGELOG.md  CLAUDE.md  CMakeLists.txt  CONTRIBUTING.md  HANDOVER.md  INSTALL.md  LICENSE  PROGRESS.md  README.md  forum-post-cockos.txt  forum-reply-reamix-thread.txt  index.xml  install.ps1  install.sh  pyproject.toml
.github/: FUNDING.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: build.yml
docs/: guide.html
legacy/v1-lua/: INSTALL.md  install.ps1  install.sh  pyproject.toml
legacy/v1-lua/scripts/reaper/: reabeat.lua  reabeat_actions.lua  reabeat_server.lua  reabeat_socket.lua  reabeat_theme.lua  reabeat_ui.lua
legacy/v1-lua/src_reabeat/: __init__.py  config.py  detector.py  server.py
scripts/reaper/: reabeat.lua  reabeat_actions.lua  reabeat_server.lua  reabeat_socket.lua  reabeat_theme.lua  reabeat_ui.lua  reabeat_waveform.lua
src/: BeatDetector.cpp  BeatDetector.h  BeatInterpolator.cpp  BeatInterpolator.h  DockableWindow.h  DownbeatCleaner.cpp  DownbeatCleaner.h  FilenameParser.cpp  FilenameParser.h  InferenceProcessor.cpp  InferenceProcessor.h  MainComponent.cpp  MainComponent.h  MelSpectrogram.cpp  MelSpectrogram.h  ModelManager.cpp  ModelManager.h  OnsetRefinement.cpp  OnsetRefinement.h  PluginWindow.h  Postprocessor.cpp  Postprocessor.h  ReaperActions.cpp  ReaperActions.h  TempoEstimator.cpp  TempoEstimator.h  TimeSigDetector.cpp  TimeSigDetector.h  WaveformView.cpp  WaveformView.h  main.cpp
src/reabeat/: __init__.py  __main__.py  cli.py  config.py  detector.py  server.py
tests/: test_detector.py  test_server.py
