[project]
name = "reabeat"
version = "1.3.1"
description = "Neural beat detection and tempo mapping for REAPER"
readme = "README.md"
requires-python = ">=3.10,<3.13"
license = {text = "MIT"}
authors = [
    {name = "ReaBeat Authors"}
]
keywords = ["reaper", "beat-detection", "tempo", "music", "daw"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Multimedia :: Sound/Audio",
    "Topic :: Multimedia :: Sound/Audio :: Analysis",
]

dependencies = [
    "librosa>=0.10.0",
    "numpy>=1.24.0,<2.0",
    "click>=8.0.0",
    "torch>=2.0.0",
    "torchaudio>=2.0.0",
    "beat-this @ https://github.com/CPJKU/beat_this/archive/c8c320e84f1a4e5b291327debe754734ea802afc.tar.gz",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "ruff>=0.1.0",
]

[project.scripts]
reabeat = "reabeat.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/reabeat"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"

[tool.ruff]
target-version = "py310"
line-length = 100
src = ["src"]
